# crux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/crux-cli/: Cargo.toml
crates/crux-cli/src/: logging.rs  main.rs
crates/crux-cli/src/commands/: ast.rs  audit.rs  bash.rs  build.rs  coach.rs  config.rs  digest.rs  doctor.rs  execute.rs  hook.rs  humanize.rs  hygiene.rs  init.rs  mcp.rs  memory.rs  mod.rs  profile.rs  search.rs  setup.rs  stats.rs  version.rs
crates/crux-cli/tests/: cli_basic.rs
crates/crux-core/: Cargo.toml
crates/crux-core/migrations/: 001_initial.sql  002_delta_cache.sql  003_memory.sql  004_coach.sql  005_ast_graph.sql  006_hybrid_search.sql  007_file_snapshots.sql  008_file_snapshots_scope.sql  009_ast_file_signatures.sql  010_turn_log.sql  011_pinned_cache.sql
crates/crux-core/src/: config.rs  config_watch.rs  db.rs  error.rs  lib.rs  merkle.rs  paths.rs  telemetry.rs  tokens.rs  walk.rs
crates/crux-humanizer/: Cargo.toml
crates/crux-humanizer/src/: engine.rs  lib.rs  rules.rs  tokenizer.rs  types.rs
crates/crux-l10-setup/: Cargo.toml
crates/crux-l10-setup/profiles/: agents.md  analysis.md  coding.md
crates/crux-l10-setup/src/: lib.rs  profiles.rs  templates.rs
crates/crux-l10-setup/src/setup/: agents.rs  json_merge.rs  mod.rs  skill.rs  yaml_merge.rs
crates/crux-l10-setup/templates/: architecture_map.md  claudeignore  common_mistakes.md  completions_readme.md  crux_ignore  quick_start.md  sessions_readme.md
crates/crux-l11-digest/: Cargo.toml
crates/crux-l11-digest/src/: engine.rs  lib.rs  render.rs  types.rs
crates/crux-l12-hygiene/: Cargo.toml
crates/crux-l12-hygiene/src/: fixer.rs  lib.rs  rules.rs  scanner.rs  stripper.rs  types.rs
crates/crux-l12-hygiene/tests/: end_to_end.rs
crates/crux-l3-bash/: Cargo.toml
crates/crux-l3-bash/filters/: cargo.toml  generic.toml  git.toml  jest.toml  npm.toml  openclaw.toml
crates/crux-l3-bash/src/: engine.rs  lib.rs  pipeline.rs  spec.rs
crates/crux-l4-readcache/: Cargo.toml
crates/crux-l4-readcache/benches/: l4_bench.rs
crates/crux-l4-readcache/src/: contextignore.rs  delta.rs  lib.rs  pin.rs
crates/crux-l5-ast/: Cargo.toml
crates/crux-l5-ast/benches/: l5_bench.rs
crates/crux-l5-ast/src/: extract.rs  graph.rs  indexer.rs  lib.rs  resolver.rs  sig_cache.rs  tsconfig.rs  types.rs
crates/crux-l6-search/: Cargo.toml
crates/crux-l6-search/benches/: l6_bench.rs
crates/crux-l6-search/src/: chunker.rs  embed.rs  index.rs  lib.rs  merkle.rs  search.rs  types.rs
crates/crux-l6-search/tests/: incremental_reindex.rs
crates/crux-l7-sandbox/: Cargo.toml  seccomp-plan.md
crates/crux-l7-sandbox/src/: agent_perms.rs  executor.rs  lib.rs  permissions.rs  seccomp.rs  types.rs
crates/crux-l8-memory/: Cargo.toml
crates/crux-l8-memory/src/: decay.rs  engine.rs  lib.rs  openclaw_export.rs  types.rs
crates/crux-l9-coach/: Cargo.toml
crates/crux-l9-coach/src/: drift.rs  engine.rs  lib.rs  loop_detect.rs  openclaw.rs  types.rs
crates/crux-mcp/: Cargo.toml
crates/crux-mcp/src/: dispatch.rs  lib.rs  protocol.rs  server.rs  shrink.rs  tools.rs
crates/crux-mcp/src/tools/: audit.rs  bash.rs  common.rs  digest.rs  execute.rs  graph.rs  memory.rs  mod.rs  read.rs  search.rs  symbols.rs
docs/: ARCHITECTURE.md  HUMANIZER.md  HYGIENE.md  INSTALL.md  MCP.md
examples/hello-crux/: .claudeignore  CLAUDE.md  Cargo.toml  README.md
examples/hello-crux/.crux/: ARCHITECTURE_MAP.md  COMMON_MISTAKES.md  QUICK_START.md  config.toml  contextignore
examples/hello-crux/.crux/completions/: README.md
examples/hello-crux/.crux/sessions/: README.md
examples/hello-crux/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config.rs  json_rpc.rs
scripts/: install.sh
