[package]
name = "crux-fuzz"
version.workspace = true
edition.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
crux-core = { path = "../crates/crux-core" }
crux-mcp = { path = "../crates/crux-mcp" }
serde_json = "1"
toml = "0.8"

[[bin]]
name = "json_rpc"
path = "fuzz_targets/json_rpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config"
path = "fuzz_targets/config.rs"
test = false
doc = false
bench = false
