[package]
name = "crux-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CRUX command-line entry point."

[[bin]]
name = "crux"
path = "src/main.rs"

[dependencies]
crux-core.workspace = true
crux-l3-bash.workspace = true
crux-l4-readcache.workspace = true
crux-l5-ast.workspace = true
crux-l6-search.workspace = true
crux-l7-sandbox.workspace = true
crux-l8-memory.workspace = true
crux-l9-coach.workspace = true
crux-l10-setup.workspace = true
crux-mcp.workspace = true

clap.workspace = true
dialoguer.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
