[package]
name = "crux-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CRUX command-line entry point."

[[bin]]
name = "crux"
path = "src/main.rs"

[dependencies]
crux-core.workspace = true
crux-l3-bash.workspace = true
crux-l4-readcache.workspace = true
crux-l5-ast.workspace = true
crux-l6-search.workspace = true
crux-l7-sandbox.workspace = true
crux-l8-memory.workspace = true
crux-l9-coach.workspace = true
crux-l10-setup.workspace = true
crux-l11-digest.workspace = true
crux-l12-hygiene.workspace = true
crux-humanizer.workspace = true
crux-mcp.workspace = true

clap.workspace = true
dialoguer.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"

# ── Feature gates ─────────────────────────────────────────────────────
#
# Default build (`cargo build`) ships the offline `HashEmbedder` only.
# Build with `--features full` (or `--features fastembed`) to pull in
# the ONNX-backed `FastEmbedder`. The on-disk schema partitions vectors
# by `(provider, model, dim)`, so existing hash-indexed rows stay valid
# after switching — but the agent must run `crux reindex --force` to
# populate fastembed embeddings before any dense search will use them.
[features]
default = []
fastembed = ["crux-l6-search/fastembed"]
# `full` is the conventional "everything turned on" alias users can
# remember without grepping the Cargo manifests. New opt-in heavy
# features (e.g. seccomp on Linux) should be added here, not silently
# enabled by default.
full = ["fastembed"]
