[package]
name = "crux-l10-setup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CRUX Layer 10: project init scaffolding (CLAUDE.md, .crux/, profiles)."

[dependencies]
crux-core.workspace = true
chrono.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
