[package]
name = "crux-l3-bash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CRUX Layer 3: bash command output filter (TOML DSL + 3-tier parsers)."
repository.workspace = true
readme.workspace = true

[dependencies]
crux-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
regex = "1.10"

[dev-dependencies]
tempfile = "3"
