[package]
name = "crux-l4-readcache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CRUX Layer 4: file read cache (mtime + range deduplication)."
repository.workspace = true
readme.workspace = true

[dependencies]
crux-core.workspace = true
rusqlite.workspace = true
chrono.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
similar = "2.6"
regex = "1.10"

[dev-dependencies]
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "l4_bench"
harness = false
