[package]
name = "crux-l9-coach"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CRUX Layer 9: quality scoring, loop detection, CLAUDE.md drift tracker."
repository.workspace = true
readme.workspace = true

[dependencies]
crux-core.workspace = true
rusqlite.workspace = true
chrono.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
