[package]
name = "crux-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CRUX MCP (Model Context Protocol) server: exposes crux layers as JSON-RPC tools."
repository.workspace = true
readme.workspace = true

[dependencies]
crux-core.workspace = true
crux-l3-bash.workspace = true
crux-l4-readcache.workspace = true
crux-l5-ast.workspace = true
crux-l6-search.workspace = true
crux-l7-sandbox.workspace = true
crux-l8-memory.workspace = true
crux-l11-digest.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
regex = "1.10"
ctrlc.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
